# eno

./: .containerignore  .gitignore  Containerfile  README.md  Taskfile.yml  data  pyproject.toml
docs/: AETHER.md  DATA.md  STEPS.md  aether.md  data.md  extraction.md  grpcurl.md  project.md  steps.md
notebooks/: 01_hello_world.ipynb  02_lute_data_exploration.ipynb
scripts/: duckdb_query.py  extract_from_lute.py
